fixes and unit tests

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,8 @@ retry.limit=4
 crypto.key=1234567890123456
 # used to apply schema.sql
 spring.sql.init.mode=always
+# https://stackoverflow.com/questions/30549489 disable lazy init for view layer
+spring.jpa.open-in-view=false
 spring.datasource.url=jdbc:mysql://db_container:3306/db_name?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=pass
