added retry limit to notify and improved docs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-retry.limit=4
+retry.limit=5
+retry.limit.notify=10
 # anything with 16 bytes
 crypto.key=1234567890123456
 # used to apply schema.sql
